# Contana

./: docker-compose.prod.yml  docker-compose.yml  readme.md
backend/: .env.example  .gitignore  Dockerfile  manage.py  populate_db.py  pyproject.toml  requirements.txt
backend/apps/clients/: admin.py  models.py  pagination.py  serializers.py  urls.py  utils.py  views.py
backend/apps/clients/migrations/: 0001_initial.py  0002_client_type.py  0003_client_archived.py  0004_clientfiles.py  0005_rename_siret_client_siren.py  0006_rename_siren_client_siret.py  0007_rename_siret_client_siren.py  0008_client_created_by.py  0009_client_status.py  0010_client_crm_platform_client_crm_source_client_crm_url.py  0010_client_platform_client_source_client_url.py  0011_alter_client_status.py  0011_rename_platform_client_crm_platform_and_more.py  0012_alter_client_country.py
backend/apps/constructor/: apps.py  serializers.py  urls.py  utils.py  views.py
backend/apps/constructor/templatetags/: custom_filters.py
backend/apps/core/: models.py  permissions.py  tasks.py  utils.py
backend/apps/dashboard/: apps.py  urls.py  utils.py  views.py
backend/apps/documents/: admin.py  models.py  pagination.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/apps/documents/migrations/: 0001_initial.py  0002_rename_total_vat_document_total_tva.py  0003_alter_documentsection_description_and_more.py  0004_alter_documentsection_discount_type.py  0005_alter_documentsection_discount_type.py  0006_document_state.py  0007_document_devis_accepted_or_refused_at_and_more.py  0008_document_linked_devis.py  0009_remove_document_linked_devis_and_more.py  0010_remove_document_linked_document_and_more.py  0011_document_linked_parent_devis.py  0012_document_linked_parent_facture.py  0014_documentsection_subtotal.py  0021_document_file.py  (+15 more)
backend/apps/entreprise/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/apps/tasks/: models.py  serializers.py  urls.py  views.py
backend/apps/user/: authentication.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/contana/: asgi.py  celery.py  settings-prod.py  settings.py  tasks.py  urls.py  wsgi.py
backend/services/constructor/: generate.py
(+194 files in other folders)
