[project]
name = "contana"
version = "0.1.0"
description = ""
authors = [
    {name = "0xPierre"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "amqp (==5.3.1)",
    "asgiref (==3.9.1)",
    "billiard (==4.2.1)",
    "black (==25.1.0)",
    "boto3 (==1.40.6)",
    "botocore (==1.40.6)",
    "celery (==5.5.3)",
    "certifi (==2025.8.3)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.3)",
    "click (==8.2.1)",
    "click-didyoumean (==0.3.1)",
    "click-plugins (==1.1.1.2)",
    "click-repl (==0.3.0)",
    "colorama (==0.4.6)",
    "cron-descriptor (==1.4.5)",
    "cryptography (==45.0.6)",
    "django (==5.2.5)",
    "django-autoslug (==1.9.9)",
    "django-celery-beat (==2.8.1)",
    "django-cors-headers (==4.7.0)",
    "django-dbbackup (==4.3.0)",
    "django-extensions (==4.1)",
    "django-filter (==25.1)",
    "django-guardian (==3.0.3)",
    "django-ses (==4.4.0)",
    "django-storages (==1.14.6)",
    "django-timezone-field (==7.1)",
    "djangorestframework (==3.16.1)",
    "djangorestframework-simplejwt (==5.5.1)",
    "gunicorn (==23.0.0)",
    "idna (==3.10)",
    "jmespath (==1.0.1)",
    "kombu (==5.5.4)",
    "markdown (==3.8.2)",
    "mypy-extensions (==1.1.0)",
    "packaging (==25.0)",
    "pathspec (==0.12.1)",
    "pdfkit (==1.0.0)",
    "pillow (==11.3.0)",
    "pip (==25.2)",
    "platformdirs (==4.3.8)",
    "prompt-toolkit (==3.0.51)",
    "psycopg2-binary (==2.9.10)",
    "pycparser (==2.22)",
    "pyjwt (==2.10.1)",
    "python-crontab (==3.3.0)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.1.1)",
    "pytz (==2025.2)",
    "redis (==6.4.0)",
    "requests (==2.32.4)",
    "s3transfer (==0.13.1)",
    "sentry-sdk (==2.34.1)",
    "setuptools (==57.5.0)",
    "six (==1.17.0)",
    "sqlparse (==0.5.3)",
    "stripe (==12.4.0)",
    "typing-extensions (==4.14.1)",
    "tzdata (==2025.2)",
    "urllib3 (==2.5.0)",
    "vine (==5.1.0)",
    "wcwidth (==0.2.13)",
    "wheel (==0.45.1)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
